--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateUserProfileActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".GoogleSignInActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".CreateAccountActivity"><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".CreateUserProfileActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".GoogleSignInActivity">
+
         </activity>
     </application>
 
