Added SignIn Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateAccountActivity"><intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".HomepageActivity"></activity>
+        <activity android:name=".CreateAccountActivity">
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
-        <activity android:name=".SignInActivity" />
+        </activity>
+        <activity android:name=".SignInActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".CreateUserProfileActivity" />
         <activity android:name=".MainActivity" />
-
     </application>
 
 </manifest>
