--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,16 @@
         <activity android:name=".PostBookActivity" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".SignInActivity">
+        </activity>
+        <activity android:name=".CreateUserProfileActivity" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateUserProfileActivity" />
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
