--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
@@ -40,5 +40,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'com.android.support:design:29.1.1'
+
+    //recyclerView
+    implementation 'com.android.support:support-compat:29.0.0'
+
+    //cardView
+    implementation 'com.android.support:cardview-v7:29.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 }
