--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StationaryPostActivity"></activity>
+        <activity android:name=".login"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".StationaryPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
         <activity android:name=".PostBookActivity" />
         <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".SignInActivity">
-        </activity>
+        <activity android:name=".SignInActivity" />
         <activity android:name=".CreateUserProfileActivity" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".sell"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
