--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login"></activity>
+        <activity android:name=".extra"></activity>
+        <activity android:name=".login" />
         <activity android:name=".MainActivity" />
         <activity android:name=".StationaryPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
