--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".extra"></activity>
-        <activity android:name=".login" />
+        <activity android:name=".LoginActivity" ><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".StationaryPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
