--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".extra"></activity>
-        <activity android:name=".LoginActivity" ><intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".StationaryPostActivity" />
+        <activity android:name=".StationaryPostActivity"></activity>
         <activity android:name=".PostLabCoatActivity" />
-        <activity android:name=".PostBookActivity" />
+        <activity android:name=".PostBookActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".SignInActivity">
+        </activity>
         <activity android:name=".CreateUserProfileActivity" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
