Backend integrated with Books Fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,19 @@
         <activity android:name=".PostLabCoatActivity" />
         <activity android:name=".PostBookActivity"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name="PageAdapter"></activity>
+        <activity android:name=".CreateAccountActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".SignInActivity">
-        </activity>
+
+        <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".CreateUserProfileActivity" />
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
