Implemented RequestedItems 1.Made frontend hardwire for Requested Items 2.Made Popup Screen 3.Made PageAdapter for Requested Items 4.Made RecyclerView Adapter for requested Items

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name=".PostBookActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".PageAdapter" />
+        <activity android:name=".PageAdapter_HomePage" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
