--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,26 +14,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SaleItemDetailActivity"></activity>
-        <activity android:name=".ToolsPostActivity" />
+        <activity android:name=".StationaryPostActivity"></activity>
         <activity android:name=".PostLabCoatActivity" />
-        <activity
-            android:name=".PostBookActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".PageAdapter_HomePage" />
+        <activity android:name=".PostBookActivity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks">
+
+        </activity>
         <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".LoginActivity">
+
+        <activity android:name=".CreateUserProfileActivity" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".CreateUserProfileActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
