--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StationaryPostActivity"></activity>
-        <activity android:name=".PostLabCoatActivity" />
-        <activity android:name=".PostBookActivity"
+        <activity android:name=".ToolPostActivity"></activity>
+        <activity
+            android:name=".SaleItemDetailActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks">
 
         </activity>
+        <activity android:name=".ToolsPostActivity" />
+        <activity android:name=".PostLabCoatActivity" />
+        <activity
+            android:name=".PostBookActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".PageAdapter_HomePage" />
         <activity android:name=".CreateAccountActivity" />
-
-        <activity android:name=".CreateUserProfileActivity" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
+        <activity
+            android:name=".SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".CreateUserProfileActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
 
         <meta-data
