Sample FAQs added(static)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ToolPostActivity"></activity>
+        <activity android:name=".SellAllActivity"></activity>
         <activity
             android:name=".SaleItemDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
         <activity android:name=".ToolsPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
         <activity
@@ -32,9 +30,7 @@
             android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
         <activity
             android:name=".SignUpActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
         <activity android:name=".CreateUserProfileActivity" />
         <activity
             android:name=".MainActivity"
