--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SellAllActivity"></activity>
+        <activity android:name=".SellAllActivity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
         <activity
             android:name=".SaleItemDetailActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
