--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ToolPostActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ToolPostActivity" />
         <activity
             android:name=".SaleItemDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
         <activity android:name=".ToolsPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
         <activity
@@ -29,9 +28,6 @@
         <activity android:name=".CreateAccountActivity" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
-        <activity
-            android:name=".SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,10 +37,8 @@
         </activity>
         <activity android:name=".CreateUserProfileActivity" />
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:name=".SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
