Log in ,sign in ,bug report

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ToolPostActivity"></activity>
+        <activity android:name=".ToolsPostActivity"></activity>
         <activity
             android:name=".SaleItemDetailActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks">
 
         </activity>
-        <activity android:name=".ToolsPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
         <activity
             android:name=".PostBookActivity"
@@ -28,10 +27,10 @@
         <activity android:name=".PageAdapter_HomePage" />
         <activity android:name=".CreateAccountActivity" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,7 +40,7 @@
         </activity>
         <activity android:name=".CreateUserProfileActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
