--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tds.gihbookmarks">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,18 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".SaleItemDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.PostBooks" />
         <activity android:name=".ToolsPostActivity" />
         <activity android:name=".PostLabCoatActivity" />
-        <activity
-            android:name=".PostBookActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".PageAdapter_HomePage" />
         <activity android:name=".CreateAccountActivity" />
         <activity
@@ -38,21 +34,9 @@
         </activity>
         <activity
             android:name=".SignUpActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks">
-
-
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.PostBooks" />
         <activity android:name=".CreateUserProfileActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-
-        </activity>
-        <activity android:name=".SellAllActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks"></activity>
-
+        <activity android:name=".MainActivity" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
