--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SellAllActivity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"/>
         <activity
             android:name=".SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks" />
