FAQ questions activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".faq_que2Activity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks"/>
+        <activity
+            android:name=".faq_1Activity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks" />
         <activity
             android:name=".SaleItemDetailActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks" />
@@ -32,13 +37,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SellAllActivity"
-            android:theme="@style/AppTheme.NoActionBar.PostBooks"/>
+        <activity
+            android:name=".SellAllActivity"
+            android:theme="@style/AppTheme.NoActionBar.PostBooks" />
         <activity
             android:name=".SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar.PostBooks" />
         <activity android:name=".CreateUserProfileActivity" />
         <activity android:name=".MainActivity" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
